--- a/E-Commerce/Views/Shared/_Layout.cshtml
+++ b/E-Commerce/Views/Shared/_Layout.cshtml
@@ -42,12 +42,22 @@
                                         <li class="nav-item">
                                             <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                                         </li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+                                    </li>
+
                                         <li class="nav-item">
                                             <a class="dropdown-item" asp-area="Identity" asp-controller="Role" asp-action="Index">Roles</a>
 
                                             <li><hr class="dropdown-divider"></li>
                                     </ul>
                                 </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
+                                    <i class="bi bi-cart"></i> &nbsp; (0)
+                                </a>
+
+                            </li>
                             }
                         </ul>
                         <ul class="navbar-nav ms-auto">
