--- a/E-Commerce/Areas/Customer/Views/Cart/Index.cshtml
+++ b/E-Commerce/Areas/Customer/Views/Cart/Index.cshtml
@@ -35,7 +35,18 @@
                                 <div class="col-12 col-lg-5 text-center row">
                                     <div class="col-3 text-md-right pt-2 pt-md-4">
                                         <h6 class="fw-semibold">
-                                            @item.Product?.Price.ToString("c")
+                                            @if(item.Count > 100)
+                                            {
+                                                @item.Product?.Price100.ToString("c")
+                                            }
+                                            else if(item.Count > 50)
+                                            {
+                                                @item.Product?.Price50.ToString("c")
+                                            }
+                                            else
+                                            {
+                                                @item.Product?.Price.ToString("c")
+                                            }
                                             <span class="text-muted">&nbsp;x&nbsp;</span>@item.Count
                                         </h6>
                                     </div>
@@ -81,10 +92,18 @@
                 </div>
                 <div class="row">
                     <div class="col-md-2 offset-md-5">
-                        <a asp-area="Customer" asp-controller="Order" asp-action="Summary" class="btn btn-primary border-0 bg-gradient w-100 py-2">Summary</a>
+                        @if (Model.carts != null && Model.carts.Any())
+                        {
+                            <a asp-area="Customer" asp-controller="Cart" asp-action="Summary" class="btn btn-primary border-0 bg-gradient w-100 py-2">Summary</a>
+                        }
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </form>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ToastrPartial");
+    }
+}
