--- a/E-Commerce/Views/Shared/_Layout.cshtml
+++ b/E-Commerce/Views/Shared/_Layout.cshtml
@@ -26,10 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-						@if (User.IsInRole("Admin"))
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Order Management</a>
+                            </li>
+                            @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,9 +44,9 @@
                                         <li class="nav-item">
                                             <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
                                         </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
-                                    </li>
+                                        <li class="nav-item">
+                                            <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+                                        </li>
 
                                         <li class="nav-item">
                                             <a class="dropdown-item" asp-area="Identity" asp-controller="Role" asp-action="Index">Roles</a>
@@ -52,15 +54,16 @@
                                             <li><hr class="dropdown-divider"></li>
                                     </ul>
                                 </li>
+                            }
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                                    <i class="bi bi-cart"></i> &nbsp; (0)
+                                    <i class="bi bi-cart"></i> &nbsp;
                                 </a>
 
                             </li>
-                            }
-                        </ul>
-                        <ul class="navbar-nav ms-auto">
+                        }
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
                         @if (User.Identity != null && User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
